--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-strands-agents[openai,anthropic,gemini]
-serena-agent
-python-dotenv
+strands-agents[openai,anthropic,gemini]>=0.1.9
+serena-agent>=0.1.4
+python-dotenv>=1.2.1
